Allow Navbar ripple color to be themed
PS1:
Layers Commit by @setiawanjimmy
Rewrite of commit by: KreAch3R
Original commit by: Dave Kover
Distilled from: https://github.com/CyanogenMod/android_frameworks_base/commit/05ce0a6f5651743add398556d557a5f4c40c2503

Change-Id: I7969e952d7e08f1d12e89291512312421585b70f
Signed-off-by: sub77 <sub77@ymail.com>

--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -157,4 +157,15 @@
     <color name="ksh_key_item_color">@color/material_grey_600</color>
     <color name="ksh_key_item_background">@color/material_grey_100</color>
 
+    <!-- Custom Carrier Label -->
+    <color name="status_bar_carrier_color">#FFFFFFFF</color>
+
+    <!-- Status bar battery level text color -->
+    <color name="status_bar_battery_level_text_color">#ffffff</color>
+
+    <color name="system_primary_color">@*android:color/material_blue_grey_900</color>
+
+    <!-- Navigation button ripple color -->
+    <color name="navbutton_ripple_color">#FFFFFFFF</color>
+
 </resources>
